--- a/app_files/pubspec.yaml
+++ b/app_files/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.3
+  confetti: ^0.7.0
+  introduction_screen: ^3.1.14
+  flutter_native_splash: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +61,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
+  # App assets
+  assets:
+    - assets/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -88,3 +93,13 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# Native splash screen configuration
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/splash_icon.png
+  android_12:
+    color: "#FFFFFF"
+    image: assets/splash_icon.png
+  ios: true
+  android: true
