--- a/app_files/pubspec.yaml
+++ b/app_files/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   confetti: ^0.7.0
   introduction_screen: ^3.1.14
   flutter_native_splash: ^2.4.4
+  file_picker: ^8.0.0+1
+  share_plus: ^9.0.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
